Random changes to learn Git

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1 style="font-size: 45px;">Gokdenis Ersoy</h1>
     <p></p><img src="me.jpg" wdith="200" height="300"></p>
 <p><p> I was born in Brooklyn, NY on November 6th 2001.
-    <br> I moved to Queens at the young age of 5 and have been there since.
+    <br> I moved to Queens atasasasasas the young age of 5 and have been there since.
     <br> I am majoring in Finance and Information Systems at Syracuse University.
 <br> I like to watch documentaries in my free time.</p>
 
