Changed to blue background

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: #15FE19;">
+<body style="background-color: Blue;">
 
     <h1 style="font-size: 45px;">Gokdenis Ersoy</h1>
     <p></p><img src="me.jpg" wdith="200" height="300"></p>
