--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: Blue;">
+<body style="background-color: lightsteelblue;">
 
     <h1 style="font-size: 45px;">Gokdenis Ersoy</h1>
     <p></p><img src="me.jpg" wdith="200" height="300"></p>
+    <p></p><img src="ZHAOSHENGHAOSHENG.jpg" wdith="200" height="300"></p>
 <p><p> I was born in Brooklyn, NY on November 6th 2001.
     <br> I moved to Queens atasasasasas the young age of 5 and have been there since.
     <br> I am majoring in Finance and Information Systems at Syracuse University.
